--- a/work.html
+++ b/work.html
@@ -43,11 +43,11 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="index.html">Portfolio</a>
+                    <a class="navbar-brand" href="index.phtml">Portfolio</a>
                 </div>
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
-                        <li class="active"><a href="index.html">Home</a></li>
+                        <li class="active"><a href="index.phtml">Home</a></li>
                         <li><a href="cv.html">CV</a></li>
                         <li><a href="blog">Blog</a></li>
                         <li><a href="work.html">Work</a></li>
@@ -60,63 +60,6 @@
 
     </div>
 </div>
-
-
-<!--&lt;!&ndash; Carousel-->
-<!--================================================== &ndash;&gt;-->
-<!--<div id="myCarousel" class="carousel slide" data-ride="carousel">-->
-<!--&lt;!&ndash; Indicators &ndash;&gt;-->
-<!--<ol class="carousel-indicators">-->
-<!--<li data-target="#myCarousel" data-slide-to="0" class="active"></li>-->
-<!--<li data-target="#myCarousel" data-slide-to="1"></li>-->
-<!--<li data-target="#myCarousel" data-slide-to="2"></li>-->
-<!--</ol>-->
-<!--<div class="carousel-inner" role="listbox">-->
-<!--<div class="item active">-->
-<!--<img class="first-slide" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="First slide">-->
-<!--<div class="container">-->
-<!--<div class="carousel-caption">-->
-<!--<h1>Example headline.</h1>-->
-<!--<p>Note: If you're viewing this page via a <code>file://</code> URL, the "next" and "previous" Glyphicon buttons on the left and right might not load/display properly due to web browser security rules.</p>-->
-<!--<p><a class="btn btn-lg btn-primary" href="#" role="button">Sign up today</a></p>-->
-<!--</div>-->
-<!--</div>-->
-<!--</div>-->
-<!--<div class="item">-->
-<!--<img class="second-slide" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Second slide">-->
-<!--<div class="container">-->
-<!--<div class="carousel-caption">-->
-<!--<h1>Another example headline.</h1>-->
-<!--<p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>-->
-<!--<p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>-->
-<!--</div>-->
-<!--</div>-->
-<!--</div>-->
-<!--<div class="item">-->
-<!--<img class="third-slide" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Third slide">-->
-<!--<div class="container">-->
-<!--<div class="carousel-caption">-->
-<!--<h1>One more for good measure.</h1>-->
-<!--<p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>-->
-<!--<p><a class="btn btn-lg btn-primary" href="#" role="button">Browse gallery</a></p>-->
-<!--</div>-->
-<!--</div>-->
-<!--</div>-->
-<!--</div>-->
-<!--<a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">-->
-<!--<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>-->
-<!--<span class="sr-only">Previous</span>-->
-<!--</a>-->
-<!--<a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">-->
-<!--<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>-->
-<!--<span class="sr-only">Next</span>-->
-<!--</a>-->
-<!--</div>&lt;!&ndash; /.carousel &ndash;&gt;-->
-
-
-<!-- Marketing messaging and featurettes
-================================================== -->
-<!-- Wrap the rest of the page in another container to center all the content. -->
 
 <div class="container marketing">
 
@@ -133,13 +76,9 @@
         </ul>
 
         <!-- Tab panes -->
-        <!-- Tab panes -->
         <div class="tab-content">
             <div role="tabpanel" class="tab-pane active" id="home">
 
-
-
-                <div class="row">
                     <div class="col-xs-6 col-sm-3">
                         <div class="thumbnail"><img src="image/websites/JesusChristSuperstar.png" alt="JesusChristSuperstar">
                             <div class="caption"><h3>Jesus Christ Superstar</h3>
@@ -151,7 +90,6 @@
                         </div>
                     </div>
 
-                    <div class="row">
                         <div class="col-xs-6 col-sm-3">
                             <div class="thumbnail"><img src="image/websites/LeighGardenCentre.png" alt="LeighGardenCentre">
                                 <div class="caption"><h3>Leigh Garden Centre</h3>
@@ -163,7 +101,6 @@
                             </div>
                         </div>
 
-                        <div class="row">
                             <div class="col-xs-6 col-sm-3">
                                 <div class="thumbnail"><img src="image/websites/TwitterQuery.png" alt="TwitterQuery">
                                     <div class="caption"><h3>Twitter Query</h3>
@@ -173,8 +110,9 @@
                                         </p>
                                     </div>
                                 </div>
-                            </div>
-            </div>
+
+</div>
+
 
             <div role="tabpanel" class="tab-pane" id="profile">5</div>
             <div role="tabpanel" class="tab-pane" id="messages">...</div>
@@ -184,10 +122,7 @@
         </div>
 
 
-
-
         <!-- START THE FEATURETTES -->
-    <div class="container marketing">
 
         <hr class="featurette-divider">
 
